<resources>
    <string name="app_name">Color</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_login">Login</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_enter">Login</string>
    <string name="lbl_create">Create Account</string>

    <string name="lbl_altura">Height</string>
    <string name="lbl_peso">Weight</string>
    <string name="lbl_calcular">Calculate</string>

    <string name="msg_imc">Your BMI is %s!</string>

    <string name="msg_welcome">Welcome %s!</string>

    <string name="lbl_name">Name</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_save">Save</string>

    <string name="button_editLabel">Edit Label</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_update">Update</string>

    <string name="lbl_required">Field required!</string>
    <string name="lbl_saved">Saved!</string>
    <string name="lbl_created">Created!</string>
    <string name="menu_login">Login</string>
    <string name="failmsg">Invalid user or password!</string>

    <string name="lbl_edit">Edit</string>
    <string name="lbl_delete">Delete</string>

    <string name="msg_delete_success">Deleted</string>

    <string name="lbl_confirm">Delete</string>
    <string name="msg_delete">Sure?</string>

    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>


</resources>
