<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextPeso"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:hint="@string/lbl_peso"
        />

    <EditText
        android:id="@+id/editTextAltura"
        android:layout_width="match_parent"
        android:hint="@string/lbl_altura"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_calcular"/>



</LinearLayout>