<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <EditText
       android:hint="@string/lbl_login"
       android:id="@+id/editTextCreateAccount"
       android:layout_width="match_parent"
       android:layout_height="62dp" />

    <EditText
        android:hint="@string/lbl_password"
        android:id="@+id/editTextCreatePassword"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:password="true"/>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_create"/>
</LinearLayout>